# graph-ics-calendar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
src/graph_ics_calendar/: __init__.py  __main__.py  config.py  db.py  graph.py  ics.py  sync.py  web.py
